refers #147 - - Fixed request URL mappings (JS + MVC params) - Align CSS. container is now static so the screen panels are in proportions

--- a/openlegacy/openlegacy-templates/openlegacy-mvc-new/src/main/webapp/template/openlegacy.css
+++ b/openlegacy/openlegacy-templates/openlegacy-mvc-new/src/main/webapp/template/openlegacy.css
@@ -4,10 +4,16 @@ body {
 	width: 100%;
 }
 
+.page_container{
+	width: 100%; 
+	height: 100%;
+	position: relative;
+}
+
 .container {
 	height: 80%;
-	width: 100%;
-	position: absolute;
+	width: 80%;
+	position: fixed;
 	font-size: x-large;
 	font-family: Helvetica, sans-serif;
 	color: navy;
